--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
 
 <body class="index-page">
 
+  <div id="preloader">
+  <div class="preloader-inner">
+    <div class="preloader-spinner"></div>
+    <div class="preloader-dots">
+      <span></span><span></span><span></span>
+    </div>
+  </div>
+  </div>
+
   <header id="header" class="header dark-background d-flex flex-column justify-content-center">
     <i class="header-toggle d-xl-none bi bi-list"></i>
 
@@ -143,6 +152,13 @@
         <div class="row">
           <div class="col-lg-5" data-aos="zoom-in" data-aos-delay="200">
             <div class="profile-card">
+
+              <div class="about-shapes">
+                <span class="shape shape-circle"></span>
+                <span class="shape shape-triangle"></span>
+                <span class="shape shape-square"></span>
+              </div>
+
               <div class="profile-header">
                 <div class="profile-image">
                   <img src="assets/img/profile/profile-square-3.webp" alt="Profile Image" class="img-fluid">
@@ -794,14 +810,12 @@
       </div>
 
     </section><!-- /Testimonials Section -->
-
     <!-- Contact Section -->
     <section id="contact" class="contact section">
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Contact</h2>
-        <p>Necessitatibus eius consequatur ex aliquid fuga eum quidem sint consectetur velit</p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -810,8 +824,6 @@
           <div class="col-lg-5">
             <div class="info-box">
               <h3>Contact Info</h3>
-              <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ante ipsum primis.</p>
-
               <div class="info-item">
                 <div class="icon-box">
                   <i class="bi bi-geo-alt"></i>
@@ -849,38 +861,70 @@
 
           <div class="col-lg-7">
             <div class="contact-form">
-              <h3>Get In Touch</h3>
-              <p>Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Vestibulum ante ipsum primis.</p>
+              <h3>Kontaktų forma</h3>
+              
+              <!-- Svarbu: id="contact-form" -->
+              <form id="contact-form" class="contact-js-form" novalidate>
+                <div class="row gy-3">
 
-              <form action="forms/contact.php" method="post" class="php-email-form">
-                <div class="row gy-4">
-
-                  <div class="col-md-6">
-                    <input type="text" name="name" class="form-control" placeholder="Your Name" required="">
+                  <div class="col-md-6 form-group">
+                    <label for="firstName" class="form-label">Vardas</label>
+                    <input type="text" id="firstName" class="form-control" />
+                    <small class="field-error"></small>
                   </div>
 
-                  <div class="col-md-6 ">
-                    <input type="email" class="form-control" name="email" placeholder="Your Email" required="">
+                  <div class="col-md-6 form-group">
+                    <label for="lastName" class="form-label">Pavardė</label>
+                    <input type="text" id="lastName" class="form-control" />
+                    <small class="field-error"></small>
                   </div>
 
-                  <div class="col-12">
-                    <input type="text" class="form-control" name="subject" placeholder="Subject" required="">
+                  <div class="col-md-6 form-group">
+                    <label for="email" class="form-label">El. paštas</label>
+                    <input type="email" id="email" class="form-control" />
+                    <small class="field-error"></small>
                   </div>
 
-                  <div class="col-12">
-                    <textarea class="form-control" name="message" rows="6" placeholder="Message" required=""></textarea>
+                  <div class="col-md-6 form-group">
+                    <label for="phone" class="form-label">Tel. numeris</label>
+                    <input type="tel" id="phone" class="form-control" placeholder="+370 6xx xxxxx" />
+                    <small class="field-error"></small>
                   </div>
 
-                  <div class="col-12 text-center">
-                    <div class="loading">Loading</div>
-                    <div class="error-message"></div>
-                    <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                    <button type="submit" class="btn">Send Message</button>
+                  <div class="col-12 form-group">
+                    <label for="address" class="form-label">Adresas</label>
+                    <input type="text" id="address" class="form-control" />
+                    <small class="field-error"></small>
                   </div>
 
+                  <div class="col-md-4 form-group">
+                    <label for="question1" class="form-label">Klausimas 1 (1–10)</label>
+                    <input type="number" id="question1" class="form-control" min="1" max="10" />
+                    <small class="field-error"></small>
+                  </div>
+
+                  <div class="col-md-4 form-group">
+                    <label for="question2" class="form-label">Klausimas 2 (1–10)</label>
+                    <input type="number" id="question2" class="form-control" min="1" max="10" />
+                    <small class="field-error"></small>
+                  </div>
+
+                  <div class="col-md-4 form-group">
+                    <label for="question3" class="form-label">Klausimas 3 (1–10)</label>
+                    <input type="number" id="question3" class="form-control" min="1" max="10" />
+                    <small class="field-error"></small>
+                  </div>
+
+                  <div class="col-12 text-end">
+                    <button type="submit" class="btn btn-primary">
+                      Submit
+                    </button>
+                  </div>
                 </div>
               </form>
+
+              <!-- Čia atvaizduosime suvestus duomenis -->
+              <div id="form-result" class="mt-4"></div>
 
             </div>
           </div>
@@ -890,6 +934,61 @@
       </div>
 
     </section><!-- /Contact Section -->
+
+        <!-- Memory Game Section -->
+    <section id="memory-game" class="section light-background">
+
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Mano žaidimas</h2>
+        <p>Atminties kortelių žaidimas (Flip Card Memory).</p>
+      </div>
+
+      <div class="container" data-aos="fade-up" data-aos-delay="100">
+        <div class="row gy-4">
+
+          <!-- Kairė pusė – nustatymai ir statistika -->
+          <div class="col-lg-4">
+            <div class="game-controls">
+
+              <h3>Nustatymai</h3>
+
+              <label for="game-difficulty" class="form-label">Pasirinkite sudėtingumą:</label>
+              <select id="game-difficulty" class="form-select">
+                <option value="easy">Lengvas</option>
+                <option value="hard">Sunkus</option>
+              </select>
+
+              <div class="game-buttons">
+                <button id="game-start" class="btn btn-primary mt-3">Start</button>
+                <button id="game-reset" class="btn btn-outline mt-2">Atnaujinti</button>
+              </div>
+
+              <div class="game-stats mt-4">
+                <h4>Statistika</h4>
+                <p>Ėjimai: <span id="game-moves">0</span></p>
+                <p>Sutapusios poros: <span id="game-matches">0 / 0</span></p>
+                <p>Laikas: <span id="game-time">00:00</span></p>
+                <p>Geriausias (lengvas): <span id="best-easy">–</span></p>
+                <p>Geriausias (sunkus): <span id="best-hard">–</span></p>
+              </div>
+
+              <div id="game-message" class="game-message mt-3"></div>
+
+            </div>
+          </div>
+
+          <!-- Dešinė pusė – žaidimo lenta -->
+          <div class="col-lg-8">
+            <div id="game-board" class="game-board">
+              <!-- Kortelės bus sugeneruojamos JavaScript -->
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </section><!-- /Memory Game Section -->
 
   </main>
 
@@ -930,6 +1029,16 @@
 
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
+  <script src="assets/js/custom.js"></script>
+
+  <script>
+    window.addEventListener("load", function () {
+      var preloader = document.getElementById("preloader");
+      if (preloader) {
+        preloader.classList.add("preloader-hide");
+      }
+    });
+  </script>
 
 </body>
 
